tests/NormalTests/paczka1/small_fuzzy/47844203.err
Error in line 5: KBR1K3y A41 47,5
Error in line 3: zK5d A41 52,6
Error in line 13: P7yAZKVZ2 A41 78,3
